# Sichuan-Mahjong-Assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.bat  run.bat
src/: main.cpp
src/analyzer/: Analyzer.h  EfficiencyAnalyzer.cpp  EfficiencyAnalyzer.h  ShantenAnalyzer.cpp  ShantenAnalyzer.h
src/core/: DiscardAnalyzer.cpp  DiscardAnalyzer.h  EfficiencyCalculator.cpp  EfficiencyCalculator.h  Hand.cpp  Hand.h  ShantenCalculator.cpp  ShantenCalculator.h  Tile.cpp  Tile.h
src/gui/: MainWindow.cpp  MainWindow.h
